# cmake-make-avr

./: README.md
CMake/: CMakeLists.txt
Make/: MakeFile
